src/test/ui/feature-gates/feature-gate-link_args.stderr
error[E0658]: the `link_args` attribute is experimental and not portable across platforms, it is recommended to use `#[link(name = "foo")] instead
  --> $DIR/feature-gate-link_args.rs:11:1
   |
LL | #[link_args = "-l expected_use_case"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #29596 <https://github.com/rust-lang/rust/issues/29596> for more information
   = help: add `#![feature(link_args)]` to the crate attributes to enable

error[E0658]: the `link_args` attribute is experimental and not portable across platforms, it is recommended to use `#[link(name = "foo")] instead
  --> $DIR/feature-gate-link_args.rs:15:1
   |
LL | #[link_args = "-l unexected_use_on_non_extern_item"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #29596 <https://github.com/rust-lang/rust/issues/29596> for more information
   = help: add `#![feature(link_args)]` to the crate attributes to enable

error[E0658]: the `link_args` attribute is experimental and not portable across platforms, it is recommended to use `#[link(name = "foo")] instead
  --> $DIR/feature-gate-link_args.rs:8:1
   |
LL | #![link_args = "-l unexpected_use_as_inner_attr_on_mod"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #29596 <https://github.com/rust-lang/rust/issues/29596> for more information
   = help: add `#![feature(link_args)]` to the crate attributes to enable

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
